package candyLord;

public abstract class Event {

    abstract void process(Player player);
}
