package candyLord;

public class Game {
    int day;

    public void Game(){
        this.day = day;
    }

    public int getDay() {
        return day;
    }

    public void proceedToNextDay(){
        day += day;
    }

}
