package candyLord;

public class NoEvent extends Event{
    @Override
    void process(Player player) {

    }
}
