package candyLord;

public class PriceDecrease extends Event {
    @Override
    void process(Player player) {

    }
}
